Changes the Title in Template File

--- a/HTML/01_template.html
+++ b/HTML/01_template.html
@@ -38,7 +38,7 @@
                         - A value of 1.0 means no zoom, so the page will be displayed at its natural size. 
         -->
 
-        <title>Document</title>
+        <title>HTML Template</title>
         <!-- Sets the Title of the Web Page -->
 
     </head>
